[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hospital-triage-openenv"
version = "0.1.0"
description = "OpenEnv-compatible hospital triage and receptionist environment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "requests>=2.32.0",
  "uvicorn>=0.30.0",
  "openai>=1.45.0",
]

[project.scripts]
server = "server.app:run"

[tool.setuptools]
py-modules = ["client", "models"]

[tool.setuptools.packages.find]
include = ["server"]
